--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -103,6 +103,8 @@
       gap: 24px;
       width: 100%;
       align-items: center;
+      height: 320px;
+      margin-top: 1.5rem;
   }
 
   .main-projects1 {
@@ -113,7 +115,7 @@
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
-      height: 222px;
+      height: 100%;
   }
 
   .main-projects2 {
@@ -124,7 +126,8 @@
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
-      height: 222px;
+
+      height: 100%;
   }
 
 
@@ -187,30 +190,55 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
       gap: 12px;
       position: relative;
+      color: var(--color-white);
 
   }
 
   .section-work-top {
-      flex: 1px;
+      /* flex: 1px; */
       text-align: center;
   }
 
-  .portfolio {
-      width: 100%;
-      max-width: 982px;
+  .filter {
+    float: left;
+    background-color: #2196F3;
+    color: #ffffff;
+    width: 100px;
+    line-height: 100px;
+    text-align: center;
+    margin: 2px;
+    display: none;
   }
-
-  .projects {
-      background-color: var(--nav-color);
-      border-radius: 1.25rem;
-      padding: 1.25rem;
-      background-image: url(https://unsplash.it/1300);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      height: 320px;
-      width: 100%;
+  
+  .show {
+    display: block;
+  }
+  
+  .portfolio .container {
+    display: flex;
+    margin-top: 20px;
+    overflow: hidden;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  /* Style the buttons */
+  .btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    background-color: #ddd;
+  }
+  
+  .btn.active {
+    background-color: #666;
+    color: white;
   }
