--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -190,7 +190,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: space-around;
       gap: 12px;
       position: relative;
       color: var(--color-white);
