--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,14 +1,37 @@
 /* about */
-@media (max-width: 991.98px){
-    .section-about{
-        grid-template-columns: repeat(1,1fr);
+@media (max-width: 980px) {
+    .section-about {
+        grid-template-columns: repeat(1, 1fr);
         text-align: center;
     }
-    .section-about-left{
+
+    .section-about-left {
         display: grid;
         place-items: center;
     }
-    .section-about-right p{
+
+    .section-about-right p {
         text-align: justify;
+    }
+
+    main {
+
+        padding: 4.25rem 0.25rem;
+    }
+    .nav {
+        position: absolute;
+        bottom: 1rem;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+    }
+    .header{
+        position: absolute;
+    }
+    .main-projects{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .container{
+        
     }
 }
