--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -150,7 +150,7 @@ main {
     /* margin-top: 4.5rem; */
     /* max-width: 968px; */
     width: 100%;
-    padding: 2rem 2rem;
+    padding: 2rem;
     border-radius: var(--container-border-radius);
     background-color: var(--container-dark-color);
     min-height: 88vh;
