--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -205,22 +205,31 @@
   }
 
   .filter {
-    float: left;
-    background-color: #2196F3;
+    position: relative;
+    background-color: #363636;
     color: #ffffff;
-    width: 100px;
-    line-height: 100px;
+    display: flex;
+    width: 250px;
+    height: 180px;
     text-align: center;
-    margin: 2px;
     display: none;
+    border-radius: 0.5rem;
   }
-  
+  .filter img{
+    width: 100%;
+    object-fit: cover;
+    height: 150px;
+    border-radius: 0.5rem;
+  }
   .show {
     display: block;
   }
-  
+  #btnFilter{
+    transition: .5s;
+  }
   .portfolio .container {
     display: flex;
+    gap: 9px;
     margin-top: 20px;
     overflow: hidden;
     flex-wrap: wrap;
@@ -229,18 +238,47 @@
   
   /* Style the buttons */
   .btn {
+    border-radius: 2rem;
     border: none;
-    outline: none;
-    padding: 12px 16px;
-    background-color: #f1f1f1;
+    padding: 9px 12px;
     cursor: pointer;
+    background-color: transparent;
+    transition: .3s;
   }
   
   .btn:hover {
-    background-color: #ddd;
+    /* background-color: var(--vibrant); */
+    color: var(--vibrant-light);
   }
   
   .btn.active {
-    background-color: #666;
+    border-radius: 2rem;
+    background-color: var(--vibrant);
     color: white;
+  }
+  .filter:hover .link-portfolio{
+    height: 100%;
+  }
+  .link-portfolio{
+    font-weight: var(--font-medium);
+    opacity: 1;
+    position: absolute;
+    bottom: 0;
+    background-color: #18181860;
+    width: 100%;
+    height: 25%;
+    transition: .3s ease-in-out;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    display: grid;
+    place-content: center;
+    border-radius: 0.5rem;
+  }
+  .link-portfolio a{
+    transition: .5s;
+    color:#fff;
+
+  }
+  .link-portfolio a:hover{
+    color: var(--vibrant-light);
   }
