--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -15,7 +15,7 @@
     }
 
     .section-about-right p {
-        text-align: center;
+        text-align: left;
     }
 
     main {
@@ -48,11 +48,15 @@
         border-radius: 1em;
     
     }
+    .section-about-left img {
+        width: 190px;
+    }
     .main-projects1,.main-projects2{
         height: 200px;
     }
     .section-about{
         margin-top: 2rem;
     }
+    
     
 }
