--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,117 +1,165 @@
   /* header & nav  */
 
   .header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-color: transparent;
-      z-index: var(--z-fixed);
-      width: 100%;
-      display: flex;
-      justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: transparent;
+    z-index: var(--z-fixed);
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   .nav {
-      position: fixed;
-      top: .5rem;
-      border-radius: var(--container-border-radius);
-      height: 55px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: var(--nav-color);
-      backdrop-filter: blur(18px);
-      -webkit-backdrop-filter: blur(18px);
+    position: fixed;
+    top: .5rem;
+    border-radius: var(--container-border-radius);
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--nav-color);
+    backdrop-filter: blur(18px);
+    -webkit-backdrop-filter: blur(18px);
   }
 
   .nav-menu {
-      width: 100%;
-      padding: 1rem 2.25rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      gap: 2rem;
+    width: 100%;
+    padding: 1rem 2.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 2rem;
   }
 
   .nav-logo {
-      color: var(--vibrant);
-      font-size: 24px;
+    color: var(--vibrant);
+    font-size: 24px;
   }
 
   .nav-link {
-      transition: all .4s;
+    transition: all .4s;
   }
 
   .nav-link:hover {
-      color: var(--vibrant);
+    color: var(--vibrant);
+  }
+
+  /* slide show */
+
+  
+  .mySlides {
+    display: none;
   }
 
 
 
+  /* Slideshow container */
+
+
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 20px 25px;
+    position: absolute;
+    bottom: 0px;
+    border-radius: 1.25rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    background: #141414;
+    background: linear-gradient(0deg, #141414f2 0%, #2d2a2a00 100%);
+  }
+  .text span{
+    font-size: 1.23rem;
+    color: var(--title-bg-dark-color);
+  }
+
+  /* The dots/bullets/indicators */
+
+
+  .active {
+    background-color: #717171;
+  }
+
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+
+  /* end slideshow */
 
   /* Section hero  */
   .section-hero {
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      gap: 12px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 12px;
   }
 
   .section-hero-top {
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 5px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
   }
 
   .section-hero-top .button {
-      margin-top: 1rem;
-      display: flex;
-      align-items: center;
-      transition: .4s;
-      justify-self: center;
-      padding: .85rem .2rem .85rem 1rem;
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    transition: .4s;
+    justify-self: center;
+    padding: .85rem .2rem .85rem 1rem;
   }
 
   .section-hero-top .button i {
-      font-size: 1.2rem;
-      visibility: hidden;
-      opacity: 0;
-      transition: all .3s ease-in-out;
+    font-size: 1.2rem;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .3s ease-in-out;
   }
 
   .section-hero-top .button:hover {
-      transition: .5s;
-      gap: 0.2rem;
-      padding: .85rem 1.25rem;
-      box-shadow: #f86f20cc 0px 5px 60px 5px;
+    transition: .5s;
+    gap: 0.2rem;
+    padding: .85rem 1.25rem;
+    box-shadow: #f86f20cc 0px 5px 60px 5px;
   }
 
   .section-hero-top .button:hover i {
-      opacity: 1;
-      visibility: visible;
-      transform: translateX(.55rem);
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(.55rem);
   }
 
   .main-projects {
-      grid-template-columns: repeat(2, 1fr);
-      gap: 24px;
-      width: 100%;
-      align-items: center;
-      height: 320px;
-      margin-top: 1.5rem;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+    width: 100%;
+    align-items: center;
+    height: 320px;
+    margin-top: 1.5rem;
   }
 
   .main-projects1 {
+    position: relative;
+    display: grid;
+    place-content: center;
       background-color: var(--nav-color);
       border-radius: 1.25rem;
       padding: 1.25rem;
-      background-image: url(https://unsplash.it/1500);
+      background-image: url("/assets/images/JEALIFE_Pictures.jpg");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -119,68 +167,71 @@
   }
 
   .main-projects2 {
-      background-color: var(--nav-color);
-      border-radius: 1.25rem;
-      padding: 1.25rem;
-      background-image: url(https://unsplash.it/1400);
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
+    position: relative;
+    display: grid;
+    place-content: center;
+    background-color: var(--nav-color);
+    border-radius: 1.25rem;
+    padding: 1.25rem;
+    background-image: url(https://images.unsplash.com/photo-1617900906639-cab7adceb499?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 
-      height: 100%;
+    height: 100%;
   }
 
 
   /* section about */
   .section-about {
-      width: 100%;
-      min-height: 86vh;
-      min-height: 86dvh;
-      grid-template-columns: repeat(2, 1fr);
-      justify-content: center;
-      align-items: center;
+    width: 100%;
+    min-height: 86vh;
+    min-height: 86dvh;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
   }
 
   .section-about-left h3 {
-      font-size: var(--smaller-font-size);
-      color: var(--muted);
-      font-weight: 300;
+    font-size: var(--smaller-font-size);
+    color: var(--muted);
+    font-weight: 300;
 
   }
 
   .section-about-title {
-      color: var(--muted);
-      font-weight: var(--font-medium);
-      margin-bottom: 4.25rem;
+    color: var(--muted);
+    font-weight: var(--font-medium);
+    margin-bottom: 4.25rem;
   }
 
   .section-about-left img {
-      margin-bottom: 2rem;
-      width: 160px;
-      clip-path: circle();
-      box-shadow: #9c9a9ab6 15px 15px 15px, #ececec -15px -15px 15px;
+    margin-bottom: 2rem;
+    width: 160px;
+    clip-path: circle();
+    box-shadow: #9c9a9ab6 15px 15px 15px, #ececec -15px -15px 15px;
   }
 
   .skills {
-      padding: .25rem 0;
-      display: flex;
-      gap: 25px;
+    padding: .25rem 0;
+    display: flex;
+    gap: 25px;
   }
 
   .skills i {
-      font-size: 35px;
-      color: var(--muted);
-      border-radius: 4px;
-      box-shadow: #c4c3c3b6 9px 9px 15px, #ececec -9px -9px 15px;
+    font-size: 35px;
+    color: var(--muted);
+    border-radius: 4px;
+    box-shadow: #c4c3c3b6 9px 9px 15px, #ececec -9px -9px 15px;
   }
 
   .section-about-right {
-      padding: 2.25rem 0;
+    padding: 2.25rem 0;
   }
 
   .section-about-right p {
-      font-size: 1.2rem;
-      color: var(--muted);
+    font-size: 1.2rem;
+    color: var(--muted);
 
   }
 
@@ -188,20 +239,20 @@
   /* section work  */
 
   .section-work {
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      gap: 12px;
-      position: relative;
-      color: var(--color-white);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 12px;
+    position: relative;
+    color: var(--color-white);
 
   }
 
   .section-work-top {
-      /* flex: 1px; */
-      text-align: center;
+    /* flex: 1px; */
+    text-align: center;
   }
 
   .filter {
@@ -215,27 +266,32 @@
     display: none;
     border-radius: 0.5rem;
   }
-  .filter img{
+
+  .filter img {
     width: 100%;
     object-fit: cover;
-    height: 150px;
+    height: 160px;
     border-radius: 0.5rem;
+    transition: 0.5s;
   }
+
   .show {
     display: block;
   }
-  #btnFilter{
+
+  #btnFilter {
     transition: .5s;
   }
+
   .portfolio .container {
     display: flex;
-    gap: 9px;
+    gap: 12px;
     margin-top: 20px;
     overflow: hidden;
     flex-wrap: wrap;
     justify-content: center;
   }
-  
+
   /* Style the buttons */
   .btn {
     border-radius: 2rem;
@@ -246,21 +302,27 @@
     transition: .3s;
     color: var(--muted);
   }
-  
+
   .btn:hover {
     /* background-color: var(--vibrant); */
     color: var(--vibrant-light);
   }
-  
+
   .btn.active {
     border-radius: 2rem;
     background-color: var(--vibrant);
     color: white;
   }
-  .filter:hover .link-portfolio{
+
+  .filter:hover .link-portfolio {
     height: 100%;
   }
-  .link-portfolio{
+
+  .filter:hover img {
+    scale: 0.9;
+  }
+
+  .link-portfolio {
     font-weight: var(--font-medium);
     opacity: 1;
     position: absolute;
@@ -275,11 +337,13 @@
     place-content: center;
     border-radius: 0.5rem;
   }
-  .link-portfolio a{
+
+  .link-portfolio a {
     transition: .5s;
-    color:#fff;
+    color: #fff;
 
   }
-  .link-portfolio a:hover{
+
+  .link-portfolio a:hover {
     color: var(--vibrant-light);
   }
