--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -9,7 +9,7 @@
     --font-poppins: 'Poppins', sans-serif;
 
     /* font sizes */
-    --biggest-font-size: 4.2rem;
+    --biggest-font-size: 2.5rem;
     --h1-font-size: 1.5rem;
     --h2-font-size: 1rem;
     --normal: .938rem;
@@ -173,6 +173,6 @@ main {
 
 .section--big-title {
     text-align: center;
-    font-size: var(--biggest-font-size);
+    font-size: 3rem;
     color: var(--color-white);
 }
