--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -152,13 +152,11 @@ main {
 
 .container-dark {
     /* margin-top: 4.5rem; */
-    /* max-width: 968px; */
+    max-width: 95%;
     width: 100%;
-    padding: 2rem;
+    padding: 3.5rem 1.2rem;
     border-radius: var(--container-border-radius);
     background-color: var(--container-dark-color);
-    min-height: 88vh;
-    min-height: 88dvh;
 
 }
 
