--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,8 @@
 /* about */
 @media (max-width: 980px) {
+    .container-dark{
+        max-width: 100%;
+    }
     .section--big-title {
         font-size: 1.80rem;
     }
