--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -377,3 +377,15 @@
     border-radius: 1.55rem;
     box-shadow: #9c9a9ab6 15px 15px 15px, #fffffff1 -15px -15px 15px;
   }
+  .socials {
+    padding: .25rem 0;
+    display: flex;
+    gap: 25px;
+  }
+
+  .socials i {
+    font-size: 35px;
+    color: var(--muted);
+    border-radius: 4px;
+    box-shadow: #c4c3c3b6 9px 9px 15px, #ececec -9px -9px 15px;
+  }
