--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -386,6 +386,7 @@
   .socials i {
     font-size: 35px;
     color: var(--muted);
-    border-radius: 4px;
+    border-radius: 50px;
+    padding: .25rem;
     box-shadow: #c4c3c3b6 9px 9px 15px, #ececec -9px -9px 15px;
   }
