--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -80,13 +80,36 @@
     .filter img {
         height: 100%;
     }
+    /* .section-contact{
+        flex-direction: column;
+        gap: 50px;
+    } */
+    .socials {
+        justify-content: space-around;
+        margin-bottom: 2rem;
+        padding: 0 2rem 0 2rem;
+      }
+      .contact-information{
+        padding: 0;
+      }
+
+}
+
+@media (max-width: 600px){
+    .section-contact form{
+        width: 100%;
+    }
+}
+@media (min-width: 768px) and (max-width: 991.98px){
+    .section-contact{
+        flex-direction: row;
+        gap: 50px;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px){
     .section-contact{
         flex-direction: column;
         gap: 50px;
     }
-    .socials {
-        justify-content: space-around;
-        margin-bottom: 1rem;
-      }
-
 }
