--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -75,7 +75,7 @@
     color: var(--title-bg-dark-color);
   }
 
-  
+
 
   /* Section hero  */
   .section-hero {
@@ -340,7 +340,10 @@
     display: flex;
     align-items: center;
   }
-  .section-contact form{
+
+  .section-contact form {
+    text-align: left;
+    width: 95%;
     flex: 1;
     outline: #e2e2e2 solid 2px;
     display: flex;
@@ -348,23 +351,31 @@
     gap: 25px;
     padding: 1.25rem 2rem;
     border-radius: 1.89rem;
-    background-color: var(--bg-color);    
+    background-color: var(--bg-color);
     box-shadow: #9c9a9ab6 15px 15px 15px, #ececec -15px -15px 15px;
   }
-  .contact-information{
+
+  .contact-information {
     flex: 1;
+    padding-right: 2.98rem;
   }
+
   .contact-information h3 {
     font-size: var(--smaller-font-size);
     color: var(--muted);
     font-weight: 300;
 
   }
+
   .contact-information img {
+    justify-self: center;
     margin-bottom: 2rem;
+    margin: 0 2rem 2rem 0;
+    width: 65%;
     border-radius: 1.55rem;
     box-shadow: #9c9a9ab6 15px 15px 15px, #fffffff1 -15px -15px 15px;
   }
+
   .socials {
     padding: .25rem 0;
     display: flex;
@@ -377,4 +388,45 @@
     border-radius: 50px;
     padding: .25rem;
     box-shadow: #c4c3c3b6 9px 9px 15px, #ececec -9px -9px 15px;
+  }
+
+  .name,
+  .email,
+  .message {
+    display: flex;
+    flex-direction: column;
+  }
+
+  input[type=text],
+  input[type=email],
+  textarea {
+    border: none;
+    outline: #e2e2e2 solid 2px;
+    padding: 0.5rem;
+    border-radius: .5rem;
+    transition: .5s ease-in-out;
+  }
+
+  input[type=text]:focus,
+  input[type=email]:focus,
+  textarea:focus {
+    outline: #e2e2e2 solid 2px;
+    box-shadow: #c4c3c3b6 9px 9px 15px, #ececec -9px -9px 15px;
+  }
+
+  button[type=submit] {
+    cursor: pointer;
+    transition: .3s;
+    border: none;
+    padding: .55rem .95rem;
+    border-radius: .5rem;
+    background-color: var(--bg-color);
+    box-shadow: #c4c3c3b6 9px 9px 15px, #ececec -9px -9px 15px;
+
+  }
+
+  button[type=submit]:hover {
+    box-shadow:  #ececec -9px -9px 15px;
+    
+
   }
