--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -92,6 +92,12 @@
       .contact-information{
         padding: 0;
       }
+      
+    .section-contact form {
+        font-size: 1.25rem;
+        width: 100%;
+        padding: 1.25rem 1rem;
+    }
 
 }
 
