--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -446,3 +446,46 @@
     box-shadow: #ececec -9px -9px 15px;
     color: var(--title-bg-light-color);
   }
+
+
+  /* //---------------------------   footer  --------// */
+
+  .footer-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    gap: 20px;
+  }
+  .footer-logo{
+    color: var(--vibrant);
+    width: 100%;
+    display: grid;
+    place-content: center;
+    font-size: 2.25rem;
+  }
+
+  .footer-container .copy-right{
+    color: var(--muted);
+    font-size: var(--smaller-font-size);
+  }
+  .footer-container .socials {
+    padding: .25rem 0;
+    display: flex;
+    gap: 25px;
+  }
+
+  .footer-container .socials i {
+    font-size: 35px;
+    color: var(--muted);
+    border-radius: 50px;
+    padding: .25rem;
+    transition: .3s ease-in;
+    box-shadow: #000000 9px 9px 15px, #2c2c2c -9px -9px 15px;
+  }
+
+  .footer-container .socials i:hover {
+    box-shadow: #181818 -9px -9px 15px inset;
+
+  }
