On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   assets/css/global.css

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -150,6 +150,7 @@ main , footer{
 }
 footer{
     background-color: var(--muted-dark);
+    border-radius: var(--container-border-radius) var(--container-border-radius) 0 0 ;
 }
 .container {
     max-width: 968px;
